--- a/index.html
+++ b/index.html
@@ -6,27 +6,45 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<meta name="theme-color" content="#202020">
+		<link rel="stylesheet" href="index.css">
 		<title>Djalmir's Projects</title>
 	</head>
 
 	<body>
-		<h1>Welcome!</h1>
-		<p>
-			In this page you can have access to all my personal projects.<br/>
-			Feel free to browse and test all of them.
-		</p>
-		<ul>
-			<li>
-				<a href="https://djalmir.github.io/Home" target="_blank">Home Page</a>
-			</li>
-			<li>
-				<a href="https://djalmir.github.io/TaskControlApp" target="_blank">Task Control</a>
-			</li>
-			<li>
-				<a href="https://djalmir.github.io/Games" target="_blank">Games</a>
-			</li>
-		</ul>
-		
+		<header>
+			<h1>Welcome to Djalmir's projects page</h1>
+		</header>
+		<section>
+			<div class="container">
+				<h2>Sites</h2>
+				<ul>
+					<li>
+						<b>Home</b><hr/>
+						<a href="https://djalmir.github.io/Home" target="_blank">https://djalmir.github.io/Home</a>
+					</li>
+					<li>
+						<b>Task Control</b><hr/>
+						<a href="https://djalmir.github.io/TaskControlApp" target="_blank">https://djalmir.github.io/TaskControlApp</a>
+					</li>
+					<li>
+						<b>Games</b><hr/>
+						<a href="https://djalmir.github.io/Games" target="_blank">https://djalmir.github.io/Games</a>
+					</li>
+				</ul>
+			</div>
+
+			<div class="container">
+				<h2>Tools</h2>
+				<ul>
+					<li>
+						<b>Console Mobile</b><hr/>
+						<a href="https://cdn.jsdelivr.net/gh/Djalmir/consoleMobile@0.1.8/console.js">https://cdn.jsdelivr.net/gh/Djalmir/consoleMobile@0.1.8/console.js</a>
+					</li>
+				</ul>
+			</div>
+
+		</section>
+
 	</body>
 
 </html>
