--- a/index.html
+++ b/index.html
@@ -38,12 +38,14 @@
 				<ul>
 					<li>
 						<b>Console Mobile</b><hr/>
-						<a href="https://cdn.jsdelivr.net/gh/Djalmir/consoleMobile@0.1.8/console.js">https://cdn.jsdelivr.net/gh/Djalmir/consoleMobile@0.1.8/console.js</a>
+						<a href="https://cdn.jsdelivr.net/gh/Djalmir/consoleMobile@0.1.8/console.js" target="_blank">https://cdn.jsdelivr.net/gh/Djalmir/consoleMobile@0.1.8/console.js</a>
 					</li>
 				</ul>
 			</div>
 
 		</section>
+
+		<script src="https://cdn.jsdelivr.net/gh/Djalmir/consoleMobile@0.1.8/console.js"></script>
 
 	</body>
 
