--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 							</p>
 							<hr>
 							<small>
-								<span>Tecnologies use on this project:</span><br />
+								<span>Tecnologies used on this project:</span><br />
 								<img src="https://img.shields.io/badge/-HTML-202020?style=flat&logo=HTML5" alt="html badge" class="badge" />
 								<img src="https://img.shields.io/badge/-CSS-202020?style=flat&logo=CSS3&logoColor=1572B6" alt="css badge" class="badge" />
 								<img src="https://img.shields.io/badge/-JavaScript-202020?style=flat&logo=javascript" alt="js badge" class="badge" />
@@ -95,7 +95,7 @@
 						<button id="copyLinkBt" onclick="copyLink()">Copy Link</button>
 						<hr />
 						<small>
-							<span>Tecnologies use on this project:</span><br />
+							<span>Tecnologies used on this project:</span><br />
 							<img src="https://img.shields.io/badge/-HTML-202020?style=flat&logo=HTML5" alt="html badge" class="badge" />
 							<img src="https://img.shields.io/badge/-CSS-202020?style=flat&logo=CSS3&logoColor=1572B6" alt="css badge" class="badge" />
 							<img src="https://img.shields.io/badge/-JavaScript-202020?style=flat&logo=javascript" alt="js badge" class="badge" />
