--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<body>
 		<header>
-			<h1>Welcome to Djalmir's projects page</h1>
+			<h1>Djalmir's projects page</h1>
 		</header>
 		<section>
 			<div class="container">
