Melhorias no visual

--- a/index.html
+++ b/index.html
@@ -20,55 +20,73 @@
 				<ul>
 					<a href="https://djalmir.github.io/Home" target="_blank">
 						<li>
-							<b>Home</b>
-							<hr />
-							<p>
-								With this Home page, you can create lists of site shortcuts. Each shortcut gets the site icon automatically.
-							</p>
-							<p>
-								You can login to your Razion account and access all your shortcuts on any device.
-							</p>
+							<div>
+								<b>Home</b>
+								<hr />
+							</div>
+							<div>
+								<p>
+									With this Home page, you can create lists of site shortcuts. Each shortcut gets the site icon automatically.
+								</p>
+								<p>
+									You can login to your Razion account and access all your shortcuts on any device.
+								</p>
+							</div>
 							<br />
-							<hr />
-							<small>
-								<span>Tecnologies used on this project:</span><br />
-								<img src="https://img.shields.io/badge/-HTML-202020?style=flat&logo=HTML5" alt="html badge" class="badge" />
-								<img src="https://img.shields.io/badge/-CSS-202020?style=flat&logo=CSS3&logoColor=1572B6" alt="css badge" class="badge" />
-								<img src="https://img.shields.io/badge/-JavaScript-202020?style=flat&logo=javascript" alt="js badge" class="badge" />
-							</small>
+							<div>
+								<hr />
+								<small>
+									<span>Tecnologies used on this project:</span><br />
+									<img src="https://img.shields.io/badge/-HTML-202020?style=flat&logo=HTML5" alt="html badge" class="badge" />
+									<img src="https://img.shields.io/badge/-CSS-202020?style=flat&logo=CSS3&logoColor=1572B6" alt="css badge" class="badge" />
+									<img src="https://img.shields.io/badge/-JavaScript-202020?style=flat&logo=javascript" alt="js badge" class="badge" />
+								</small>
+							</div>
 						</li>
 					</a>
 					<a href="https://djalmir.github.io/TaskControlApp" target="_blank">
 						<li>
-							<b>Task Control</b>
-							<hr />
-							<p>
-								With this PWA and a Razion account you will be able<br />
-								to organize your tasks on your phone like a boss!
-							</p>
-							<hr />
-							<small>
-								<span>Tecnologies used on this project:</span><br />
-								<img src="https://img.shields.io/badge/-Vue.js-202020?style=flat&logo=vue.js" alt="vuejs badge" class="badge" />
-							</small>
+							<div>
+								<b>Task Control</b>
+								<hr />
+							</div>
+							<div>
+								<p>
+									With this PWA and a Razion account you will be able<br />
+									to organize your tasks on your phone like a boss!
+								</p>
+							</div>
+							<div>
+								<hr />
+								<small>
+									<span>Tecnologies used on this project:</span><br />
+									<img src="https://img.shields.io/badge/-Vue.js-202020?style=flat&logo=vue.js" alt="vuejs badge" class="badge" />
+								</small>
+							</div>
 						</li>
 					</a>
 					<a href="https://djalmir.github.io/Games" target="_blank">
 						<li>
-							<b>Games</b>
-							<hr />
-							<p>Have fun!</p>
-							<p>
-								Currently the games are working only on desktop.<br />
-								But I'll be working on this as soon as possible.
-							</p>
-							<hr>
-							<small>
-								<span>Tecnologies used on this project:</span><br />
-								<img src="https://img.shields.io/badge/-HTML-202020?style=flat&logo=HTML5" alt="html badge" class="badge" />
-								<img src="https://img.shields.io/badge/-CSS-202020?style=flat&logo=CSS3&logoColor=1572B6" alt="css badge" class="badge" />
-								<img src="https://img.shields.io/badge/-JavaScript-202020?style=flat&logo=javascript" alt="js badge" class="badge" />
-							</small>
+							<div>
+								<b>Games</b>
+								<hr />
+							</div>
+							<div>
+								<p>Have fun!</p>
+								<p>
+									Currently the games are working only on desktop.<br />
+									But I'll be working on this as soon as possible.
+								</p>
+							</div>
+							<div>
+								<hr>
+								<small>
+									<span>Tecnologies used on this project:</span><br />
+									<img src="https://img.shields.io/badge/-HTML-202020?style=flat&logo=HTML5" alt="html badge" class="badge" />
+									<img src="https://img.shields.io/badge/-CSS-202020?style=flat&logo=CSS3&logoColor=1572B6" alt="css badge" class="badge" />
+									<img src="https://img.shields.io/badge/-JavaScript-202020?style=flat&logo=javascript" alt="js badge" class="badge" />
+								</small>
+							</div>
 						</li>
 					</a>
 				</ul>
@@ -78,28 +96,34 @@
 				<h2>Tools</h2>
 				<ul>
 					<li style="cursor: default;">
-						<b>Console Mobile</b>
-						<hr />
-						<p>
-							Have you tried to build a site only with your smartphone?<br />
-							I have... 😅<br />
-							And we don't have devtools on smartphone browsers. At least I didn't found it. 🤔
-						</p>
-						<p>
-							So this project is made to help developers in this particular situation.<br />
-							You can test it by clicking the circular button at the left bottom corner of this page.<br />
-							If you want to use it on your projects, just copy the script tag below<br />
-							And paste it in your body tag, before any other script.<br/>
+						<div>
+							<b>Console Mobile</b>
+							<hr />
+						</div>
+						<div>
+							<p>
+								Have you ever tried to build a website with just your smartphone?<br />
+								I tried... 😅<br />
+								And we don't have devtools on smartphone browsers. At least I didn't found it. 🤔
+							</p>
+							<p>
+								So this project is made to help developers in this particular situation.<br />
+								You can test it by clicking the circular button at the left bottom corner of this page.<br />
+								If you want to use it on your projects, just copy the script tag below<br />
+								And paste it in your body tag, before any other script.<br />
 							<pre id="cmLink">&lt;script src="https://cdn.jsdelivr.net/gh/Djalmir/consoleMobile@latest/console.js"&gt;&lt;/script&gt;</pre>
-						</p>
-						<button id="copyLinkBt" onclick="copyLink()">Copy Link</button>
-						<hr />
-						<small>
-							<span>Tecnologies used on this project:</span><br />
-							<img src="https://img.shields.io/badge/-HTML-202020?style=flat&logo=HTML5" alt="html badge" class="badge" />
-							<img src="https://img.shields.io/badge/-CSS-202020?style=flat&logo=CSS3&logoColor=1572B6" alt="css badge" class="badge" />
-							<img src="https://img.shields.io/badge/-JavaScript-202020?style=flat&logo=javascript" alt="js badge" class="badge" />
-						</small>
+							</p>
+							<button id="copyLinkBt" onclick="copyLink()">Copy Link</button>
+						</div>
+						<div>
+							<hr />
+							<small>
+								<span>Tecnologies used on this project:</span><br />
+								<img src="https://img.shields.io/badge/-HTML-202020?style=flat&logo=HTML5" alt="html badge" class="badge" />
+								<img src="https://img.shields.io/badge/-CSS-202020?style=flat&logo=CSS3&logoColor=1572B6" alt="css badge" class="badge" />
+								<img src="https://img.shields.io/badge/-JavaScript-202020?style=flat&logo=javascript" alt="js badge" class="badge" />
+							</small>
+						</div>
 					</li>
 				</ul>
 			</div>
