--- a/index.html
+++ b/index.html
@@ -89,6 +89,32 @@
 							</div>
 						</li>
 					</a>
+					<a href="https://djalmir.github.io/chat" target="_blank">
+						<li>
+							<div>
+								<b>Old-School Chat</b>
+								<hr />
+							</div>
+							<div>
+								<p>
+									This is the first version of the chat.
+								</p>
+								<p>
+									Made with websockets, this chat stores the messages only while the involved users are still logged in.
+								</p>
+							</div>
+							<br />
+							<div>
+								<hr />
+								<small>
+									<span>Tecnologies used on this project:</span><br />
+									<img src="https://img.shields.io/badge/-HTML-202020?style=flat&logo=HTML5" alt="html badge" class="badge" />
+									<img src="https://img.shields.io/badge/-CSS-202020?style=flat&logo=CSS3&logoColor=1572B6" alt="css badge" class="badge" />
+									<img src="https://img.shields.io/badge/-JavaScript-202020?style=flat&logo=javascript" alt="js badge" class="badge" />
+								</small>
+							</div>
+						</li>
+					</a>
 				</ul>
 			</div>
 
