--- a/index.html
+++ b/index.html
@@ -92,15 +92,16 @@
 					<a href="https://djalmir.github.io/chat" target="_blank">
 						<li>
 							<div>
-								<b>Old-School Chat</b>
+								<b>Chat</b>
 								<hr />
 							</div>
 							<div>
 								<p>
-									This is the first version of the chat.
+									This is the first version of my chat.<br/>
+									I'm still working on it forks.
 								</p>
 								<p>
-									Made with websockets, this chat stores the messages only while the involved users are still logged in.
+									Made with websockets. This chat stores the messages only while the involved users are still logged in.
 								</p>
 							</div>
 							<br />
