showMessage component; chat; english corrections;

--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 	<head>
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<meta name="theme-color" content="#202020">
+		<meta name="theme-color" content="#0099ff">
 		<link rel="stylesheet" href="index.css">
 		<title>Djalmir's Projects</title>
 	</head>
 
 	<body>
+		<my-message id="my-message"></my-message>
 		<header>
 			<h1>Djalmir's projects page</h1>
 		</header>
@@ -36,7 +37,7 @@
 							<div>
 								<hr />
 								<small>
-									<span>Tecnologies used on this project:</span><br />
+									<span>Tecnologies used in this project:</span><br />
 									<img src="https://img.shields.io/badge/-HTML-202020?style=flat&logo=HTML5" alt="html badge" class="badge" />
 									<img src="https://img.shields.io/badge/-CSS-202020?style=flat&logo=CSS3&logoColor=1572B6" alt="css badge" class="badge" />
 									<img src="https://img.shields.io/badge/-JavaScript-202020?style=flat&logo=javascript" alt="js badge" class="badge" />
@@ -59,7 +60,7 @@
 							<div>
 								<hr />
 								<small>
-									<span>Tecnologies used on this project:</span><br />
+									<span>Tecnologies used in this project:</span><br />
 									<img src="https://img.shields.io/badge/-Vue.js-202020?style=flat&logo=vue.js" alt="vuejs badge" class="badge" />
 								</small>
 							</div>
@@ -81,7 +82,7 @@
 							<div>
 								<hr>
 								<small>
-									<span>Tecnologies used on this project:</span><br />
+									<span>Tecnologies used in this project:</span><br />
 									<img src="https://img.shields.io/badge/-HTML-202020?style=flat&logo=HTML5" alt="html badge" class="badge" />
 									<img src="https://img.shields.io/badge/-CSS-202020?style=flat&logo=CSS3&logoColor=1572B6" alt="css badge" class="badge" />
 									<img src="https://img.shields.io/badge/-JavaScript-202020?style=flat&logo=javascript" alt="js badge" class="badge" />
@@ -97,18 +98,18 @@
 							</div>
 							<div>
 								<p>
-									This is the first version of my chat.<br/>
-									I'm still working on it forks.
+									Let's say it's a beta version... 😅<br/>
+									There's still a lot of work to be done. But you can take a look at how it's getting.
 								</p>
 								<p>
-									Made with websockets. This chat stores the messages only while the involved users are still logged in.
+									Developed with websockets. This chat stores the messages only while the involved users are still logged in.
 								</p>
 							</div>
 							<br />
 							<div>
 								<hr />
 								<small>
-									<span>Tecnologies used on this project:</span><br />
+									<span>Tecnologies used in this project:</span><br />
 									<img src="https://img.shields.io/badge/-HTML-202020?style=flat&logo=HTML5" alt="html badge" class="badge" />
 									<img src="https://img.shields.io/badge/-CSS-202020?style=flat&logo=CSS3&logoColor=1572B6" alt="css badge" class="badge" />
 									<img src="https://img.shields.io/badge/-JavaScript-202020?style=flat&logo=javascript" alt="js badge" class="badge" />
@@ -129,8 +130,8 @@
 						</div>
 						<div>
 							<p>
-								Have you ever tried to build a website with just your smartphone?<br />
-								I tried... 😅<br />
+								Did you ever tried to build a website with just your smartphone?<br />
+								I did... 😅<br />
 								And we don't have devtools on smartphone browsers. At least I didn't found it. 🤔
 							</p>
 							<p>
@@ -140,12 +141,12 @@
 								And paste it in your body tag, before any other script.<br />
 							<pre id="cmLink">&lt;script src="https://cdn.jsdelivr.net/gh/Djalmir/consoleMobile@latest/console.js"&gt;&lt;/script&gt;</pre>
 							</p>
-							<button id="copyLinkBt" onclick="copyLink()">Copy Link</button>
+							<button id="copyLinkBt" onclick="copyLink()">Copy script tag</button>
 						</div>
 						<div>
 							<hr />
 							<small>
-								<span>Tecnologies used on this project:</span><br />
+								<span>Tecnologies used in this project:</span><br />
 								<img src="https://img.shields.io/badge/-HTML-202020?style=flat&logo=HTML5" alt="html badge" class="badge" />
 								<img src="https://img.shields.io/badge/-CSS-202020?style=flat&logo=CSS3&logoColor=1572B6" alt="css badge" class="badge" />
 								<img src="https://img.shields.io/badge/-JavaScript-202020?style=flat&logo=javascript" alt="js badge" class="badge" />
@@ -159,7 +160,7 @@
 
 		<script src="https://cdn.jsdelivr.net/gh/Djalmir/consoleMobile@0.1.8/console.js"></script>
 		<script src="index.js"></script>
-
+		<script src="./components/message.js"></script>
 	</body>
 
 </html>
