--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<meta name="theme-color" content="#0099ff">
 		<link rel="stylesheet" href="index.css">
+		<link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
 		<title>Djalmir's Projects</title>
 	</head>
 
@@ -98,7 +99,7 @@
 							</div>
 							<div>
 								<p>
-									Let's say it's a beta version... 😅<br/>
+									Let's say it's a beta version... 😅<br />
 									There's still a lot of work to be done. But you can take a look at how it's getting.
 								</p>
 								<p>
