--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<meta name="theme-color" content="#0099ff">
+		<meta name="theme-color" content="#202020">
 		<link rel="stylesheet" href="index.css">
 		<link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
 		<title>Djalmir's Projects</title>
