correção de erro de digitação

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<div>
 								<hr />
 								<small>
-									<span>Tecnologies used in this project:</span><br />
+									<span>Technologies used in this project:</span><br />
 									<img src="https://img.shields.io/badge/-HTML-202020?style=flat&logo=HTML5" alt="html badge" class="badge" />
 									<img src="https://img.shields.io/badge/-CSS-202020?style=flat&logo=CSS3&logoColor=1572B6" alt="css badge" class="badge" />
 									<img src="https://img.shields.io/badge/-JavaScript-202020?style=flat&logo=javascript" alt="js badge" class="badge" />
@@ -61,7 +61,7 @@
 							<div>
 								<hr />
 								<small>
-									<span>Tecnologies used in this project:</span><br />
+									<span>Technologies used in this project:</span><br />
 									<img src="https://img.shields.io/badge/-Vue.js-202020?style=flat&logo=vue.js" alt="vuejs badge" class="badge" />
 								</small>
 							</div>
@@ -83,7 +83,7 @@
 							<div>
 								<hr>
 								<small>
-									<span>Tecnologies used in this project:</span><br />
+									<span>Technologies used in this project:</span><br />
 									<img src="https://img.shields.io/badge/-HTML-202020?style=flat&logo=HTML5" alt="html badge" class="badge" />
 									<img src="https://img.shields.io/badge/-CSS-202020?style=flat&logo=CSS3&logoColor=1572B6" alt="css badge" class="badge" />
 									<img src="https://img.shields.io/badge/-JavaScript-202020?style=flat&logo=javascript" alt="js badge" class="badge" />
@@ -110,7 +110,7 @@
 							<div>
 								<hr />
 								<small>
-									<span>Tecnologies used in this project:</span><br />
+									<span>Technologies used in this project:</span><br />
 									<img src="https://img.shields.io/badge/-HTML-202020?style=flat&logo=HTML5" alt="html badge" class="badge" />
 									<img src="https://img.shields.io/badge/-CSS-202020?style=flat&logo=CSS3&logoColor=1572B6" alt="css badge" class="badge" />
 									<img src="https://img.shields.io/badge/-JavaScript-202020?style=flat&logo=javascript" alt="js badge" class="badge" />
@@ -147,7 +147,7 @@
 						<div>
 							<hr />
 							<small>
-								<span>Tecnologies used in this project:</span><br />
+								<span>Technologies used in this project:</span><br />
 								<img src="https://img.shields.io/badge/-HTML-202020?style=flat&logo=HTML5" alt="html badge" class="badge" />
 								<img src="https://img.shields.io/badge/-CSS-202020?style=flat&logo=CSS3&logoColor=1572B6" alt="css badge" class="badge" />
 								<img src="https://img.shields.io/badge/-JavaScript-202020?style=flat&logo=javascript" alt="js badge" class="badge" />
