--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 			<h1>Djalmir's projects page</h1>
 		</header>
 		<section>
+			<div id="mouseSeeker"></div>
+			<div id="background"></div>
 			<div class="container">
 				<h2>Sites</h2>
 				<ul>
@@ -28,7 +30,7 @@
 							</div>
 							<div>
 								<p>
-									With this Home page, you can create lists of site shortcuts. Each shortcut gets the site icon automatically.
+									With this Home page, you can create websites shortcuts lists. Each shortcut gets the site icon automatically.
 								</p>
 								<p>
 									You can login to your Razion account and access all your shortcuts on any device.
@@ -46,6 +48,31 @@
 							</div>
 						</li>
 					</a>
+
+					<a href="https://djalmir.github.io/TaskBoard" target="_blank">
+						<li>
+							<div>
+								<b>Task Board</b>
+								<hr />
+							</div>
+							<div>
+								<p>
+									With this personal Kambam PWA and a Razion account you will be able<br />
+									to organize your tasks like a boss on any device!
+								</p>
+							</div>
+							<div>
+								<hr />
+								<small>
+									<span>Technologies used in this project:</span><br />
+									<img src="https://img.shields.io/badge/-HTML-202020?style=flat&logo=HTML5" alt="html badge" class="badge" />
+									<img src="https://img.shields.io/badge/-CSS-202020?style=flat&logo=CSS3&logoColor=1572B6" alt="css badge" class="badge" />
+									<img src="https://img.shields.io/badge/-JavaScript-202020?style=flat&logo=javascript" alt="js badge" class="badge" />
+								</small>
+							</div>
+						</li>
+					</a>
+
 					<a href="https://djalmir.github.io/TaskControlApp" target="_blank">
 						<li>
 							<div>
@@ -54,7 +81,7 @@
 							</div>
 							<div>
 								<p>
-									With this PWA and a Razion account you will be able<br />
+									With this Todo list PWA and a Razion account you will be able<br />
 									to organize your tasks on your phone like a boss!
 								</p>
 							</div>
