correção no scroll

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<h2>Sites</h2>
 				<ul>
 					<a href="https://djalmir.github.io/Home" target="_blank">
-						<li>
+						<li onmouseenter="this.classList.add('hovered')" onmouseleave="this.classList.remove('hovered')" ontouchstart="this.classList.add('hovered')" ontouchend="this.classList.remove('hovered')">
 							<div>
 								<b>Home</b>
 								<hr />
@@ -50,7 +50,7 @@
 					</a>
 
 					<a href="https://djalmir.github.io/TaskBoard" target="_blank">
-						<li>
+						<li onmouseenter="this.classList.add('hovered')" onmouseleave="this.classList.remove('hovered')" ontouchstart="this.classList.add('hovered')" ontouchend="this.classList.remove('hovered')">
 							<div>
 								<b>Task Board</b>
 								<hr />
@@ -74,7 +74,7 @@
 					</a>
 
 					<a href="https://djalmir.github.io/TaskControlApp" target="_blank">
-						<li>
+						<li onmouseenter="this.classList.add('hovered')" onmouseleave="this.classList.remove('hovered')" ontouchstart="this.classList.add('hovered')" ontouchend="this.classList.remove('hovered')">
 							<div>
 								<b>Task Control</b>
 								<hr />
@@ -95,7 +95,7 @@
 						</li>
 					</a>
 					<a href="https://djalmir.github.io/Games" target="_blank">
-						<li>
+						<li onmouseenter="this.classList.add('hovered')" onmouseleave="this.classList.remove('hovered')" ontouchstart="this.classList.add('hovered')" ontouchend="this.classList.remove('hovered')">
 							<div>
 								<b>Games</b>
 								<hr />
@@ -119,7 +119,7 @@
 						</li>
 					</a>
 					<a href="https://djalmir.github.io/chat" target="_blank">
-						<li>
+						<li onmouseenter="this.classList.add('hovered')" onmouseleave="this.classList.remove('hovered')" ontouchstart="this.classList.add('hovered')" ontouchend="this.classList.remove('hovered')">
 							<div>
 								<b>Chat</b>
 								<hr />
@@ -151,7 +151,7 @@
 			<div class="container">
 				<h2>Tools</h2>
 				<ul>
-					<li style="cursor: default;">
+					<li style="cursor: default;" onmouseenter="this.classList.add('hovered')" onmouseleave="this.classList.remove('hovered')" ontouchstart="this.classList.add('hovered')" ontouchend="this.classList.remove('hovered')">
 						<div>
 							<b>Console Mobile</b>
 							<hr />
