correções de texto

--- a/index.html
+++ b/index.html
@@ -57,8 +57,12 @@
 							</div>
 							<div>
 								<p>
-									With this personal Kambam PWA and a Razion account you will be able<br />
-									to organize your tasks like a boss on any device!
+									With this personal Kambam and a Razion account you will be able<br />
+									to organize your tasks boards like a boss on any device!
+								</p>
+								<p>
+									TaskBoard is a PWA!<br />
+									So you can install it on any device!
 								</p>
 							</div>
 							<div>
@@ -81,8 +85,11 @@
 							</div>
 							<div>
 								<p>
-									With this Todo list PWA and a Razion account you will be able<br />
-									to organize your tasks on your phone like a boss!
+									With this Todo list and a Razion account you will be able<br />
+									to organize your tasks like a boss!
+								</p>
+								<p>
+									Task Control is a PWA too!
 								</p>
 							</div>
 							<div>
