vanilla js particles background

--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
 	</head>
 
 	<body>
+		<canvas id="canvas1"></canvas>
 		<my-message id="my-message"></my-message>
 		<header>
 			<h1>Djalmir's projects page</h1>
 		</header>
 		<section>
-			<div id="mouseSeeker"></div>
-			<div id="background"></div>
+			<!-- <div id="mouseSeeker"></div>
+			<div id="background"></div> -->
 			<div class="container">
-				<h2>Sites</h2>
+				<!-- <h2>Sites</h2> -->
 				<ul>
 					<a href="https://djalmir.github.io/Home" target="_blank">
 						<li onmouseenter="this.classList.add('hovered')" onmouseleave="this.classList.remove('hovered')" ontouchstart="this.classList.add('hovered')" ontouchend="this.classList.remove('hovered')">
@@ -156,7 +157,7 @@
 			</div>
 
 			<div class="container">
-				<h2>Tools</h2>
+				<!-- <h2>Tools</h2> -->
 				<ul>
 					<li style="cursor: default;" onmouseenter="this.classList.add('hovered')" onmouseleave="this.classList.remove('hovered')" ontouchstart="this.classList.add('hovered')" ontouchend="this.classList.remove('hovered')">
 						<div>
