--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<canvas id="canvas1"></canvas>
 		<my-message id="my-message"></my-message>
 		<header>
-			<h1>Djalmir's projects page</h1>
+			<h1>Welcome to Djalmir's projects page</h1>
 		</header>
 		<section>
 			<!-- <div id="mouseSeeker"></div>
@@ -59,7 +59,7 @@
 							<div>
 								<p>
 									With this personal Kambam and a Razion account you will be able<br />
-									to organize your tasks boards like a boss on any device!
+									to organize your task boards like a boss on any device!
 								</p>
 								<p>
 									TaskBoard is a PWA!<br />
@@ -193,6 +193,19 @@
 			</div>
 
 		</section>
+		<footer>
+			<small>
+				<span>Technologies used in this site:</span><br />
+				<img src="https://img.shields.io/badge/-HTML-202020?style=flat&logo=HTML5" alt="html badge" class="badge" />
+				<img src="https://img.shields.io/badge/-CSS-202020?style=flat&logo=CSS3&logoColor=1572B6" alt="css badge" class="badge" />
+				<img src="https://img.shields.io/badge/-JavaScript-202020?style=flat&logo=javascript" alt="js badge" class="badge" />
+			</small>
+			<span>Copyright &copy; 2021 - by <a href="https://github.com/Djalmir" target="_blank" rel="noopener noreferrer">Djalmir Miodutzki</a></span>
+			<button id="hideInterfaceBt" onclick="showHideInterface()">
+				<span id="hideInterfaceBtSpan">Hide Interface</span>
+				<img src="eye.svg" id="eyeImg" alt="eye image">
+			</button>
+		</footer>
 
 		<script src="https://cdn.jsdelivr.net/gh/Djalmir/consoleMobile@0.1.8/console.js"></script>
 		<script src="index.js"></script>
