Correção movimentação particulas

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							</div>
 							<div>
 								<p>
-									With this personal Kambam and a Razion account you will be able<br />
+									With this personal Kanban and a Razion account you will be able<br />
 									to organize your task boards like a boss on any device!
 								</p>
 								<p>
