--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<h1>Djalmir's Projects</h1>
 		</header>
 		<canvas id="canvas1"></canvas>
-		<section id="section1" onmouseenter="this.classList.add('hovered')" onmouseleave="this.classList.remove('hovered')" ontouchstart="this.classList.add('hovered')" ontouchend="this.classList.remove('hovered')">
+		<!-- <section id="section1" onmouseenter="this.classList.add('hovered')" onmouseleave="this.classList.remove('hovered')" ontouchstart="this.classList.add('hovered')" ontouchend="this.classList.remove('hovered')">
 			<div>
 				<iframe src="https://djalmir.github.io/matrixSelfie/" frameborder="0"></iframe>
 				<div id="section1Text">
@@ -39,7 +39,7 @@
 					</p>
 				</div>
 			</div>
-		</section>
+		</section> -->
 		<section id="section2">
 			<!-- <div id="mouseSeeker"></div>
 			<div id="background"></div> -->
