--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 			<h1>Djalmir's Projects</h1>
 		</header>
 		<canvas id="canvas1"></canvas>
-		<!-- <section id="section1" onmouseenter="this.classList.add('hovered')" onmouseleave="this.classList.remove('hovered')" ontouchstart="this.classList.add('hovered')" ontouchend="this.classList.remove('hovered')">
+		<section id="section1" onmouseenter="this.classList.add('hovered')" onmouseleave="this.classList.remove('hovered')" ontouchstart="this.classList.add('hovered')" ontouchend="this.classList.remove('hovered')">
 			<div>
-				<iframe src="https://djalmir.github.io/matrixSelfie/" frameborder="0"></iframe>
+				<!-- <iframe src="https://djalmir.github.io/matrixSelfie/" frameborder="0"></iframe> -->
 				<div id="section1Text">
 					<b>Welcome!</b>
 					<p>It's really nice to see you here!</p>
 					<p>
-						I'm Djalmir Miodutzki. And in this site you can get access to many of my personal projects.
+						I'm Djalmir Miodutzki. And in this site you can get access to some of my personal projects.
 					</p>
 					<p>If you wish to see the codes, feel free to browse all my repositories in <a href="https://github.com/Djalmir?tab=repositories" target="_blank">Github</a></p>
 					<br>
@@ -39,7 +39,7 @@
 					</p>
 				</div>
 			</div>
-		</section> -->
+		</section>
 		<section id="section2">
 			<!-- <div id="mouseSeeker"></div>
 			<div id="background"></div> -->
