--- a/index.html
+++ b/index.html
@@ -13,33 +13,33 @@
 
 	<body>
 		<my-message id="my-message"></my-message>
-		<header>
-			<h1>Djalmir's Projects</h1>
-		</header>
-		<canvas id="canvas1"></canvas>
-		<section id="section1" onmouseenter="this.classList.add('hovered')" onmouseleave="this.classList.remove('hovered')" ontouchstart="this.classList.add('hovered')" ontouchend="this.classList.remove('hovered')">
-			<div>
-				<!-- <iframe src="https://djalmir.github.io/matrixSelfie/" frameborder="0"></iframe> -->
-				<div id="section1Text">
-					<b>Welcome!</b>
-					<p>It's really nice to see you here!</p>
-					<p>
-						I'm Djalmir Miodutzki. And in this site you can get access to some of my personal projects.
-					</p>
-					<p>If you wish to see the codes, feel free to browse all my repositories in <a href="https://github.com/Djalmir?tab=repositories" target="_blank">Github</a></p>
-					<br>
-					<hr>
-					<b>About Me:</b>
-					<p>
-						I learned to program with Delphi when I was 16 years old. And I had fun with this language for a few years, until I discovered Javascript, which I fell in love with.
-						Nowadays I develop games with Javascript as a hobby, without using libraries or frameworks.
-					</p>
-					<p>
-						Learning is constant and enjoyable!
-					</p>
+		<section id="section1">
+			<div id="section1Container">
+				<h1>Welcome!</h1>
+				<p id="welcomeMsg">It's really nice to see you here!</p>
+				<div id="section1innerContainer">
+					<div id="section1Text">
+						<iframe id="selfie" src="https://djalmir.github.io/matrixSelfie/"></iframe>
+						<p>
+							I'm Djalmir Miodutzki.<br />
+							<br />
+							I learned to program with Delphi when I was 16 years old. And I had fun with this language for a few years, until I discovered JavaScript, which I fell in love with!
+							I developed some personal projects with NodeJS on the backend and HTML, CSS and pure JavaScript on the frontend. From landing pages to 2D games. These projects have received few updates since I got my first job as a frontend developer. A position that, with pride, gratitude and joy, I occupy until now!<br />
+							<br/>
+							Learning is constant and enjoyable!
+						</p>
+					</div>
 				</div>
+				<br>
+				<p>
+					In this site you can get access to some of my personal projects.<br/>
+					If you wish to see the codes, feel free to browse all my repositories in <a href="https://github.com/Djalmir?tab=repositories" target="_blank">Github</a>
+				</p>
+
+				<button id="scrollDownBt" class="blueBt" onclick="section2.scrollIntoView()"></button>
 			</div>
 		</section>
+		<canvas id="canvas1"></canvas>
 		<section id="section2">
 			<!-- <div id="mouseSeeker"></div>
 			<div id="background"></div> -->
@@ -200,7 +200,7 @@
 								And paste it in your body tag, before any other script.<br />
 							<pre id="cmLink">&lt;script src="https://cdn.jsdelivr.net/gh/Djalmir/consoleMobile@latest/console.js"&gt;&lt;/script&gt;</pre>
 							</p>
-							<button id="copyLinkBt" onclick="copyLink()">Copy script tag</button>
+							<button id="copyLinkBt" class="blueBt" onclick="copyLink()">Copy script tag</button>
 						</div>
 						<div>
 							<hr />
