remove particles from selfie

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
 				<p id="welcomeMsg">It's really nice to see you here!</p>
 				<div id="section1innerContainer">
 					<div id="section1Text">
-						<iframe id="selfie" src="https://djalmir.github.io/matrixSelfie/"></iframe>
+						<div id="canvasContainer">
+							<canvas id="matrixCanvas"></canvas>
+							<img id="pic" src="Dj.png" alt="Foto de Djalmir Miodutzki">
+						</div>
 						<p>
 							I'm Djalmir Miodutzki.<br />
 							<br />
